--- a/src/app.html
+++ b/src/app.html
@@ -13,6 +13,6 @@
 		%svelte.head%
 	</head>
 	<body>
-		<div>%svelte.body%</div>
+		<div class="h-full w-full">%svelte.body%</div>
 	</body>
 </html>
