--- a/src/app.html
+++ b/src/app.html
@@ -14,5 +14,18 @@
 	</head>
 	<body>
 		<div class="h-full w-full">%svelte.body%</div>
+    <!--Start of Tawk.to Script-->
+      <script type="text/javascript">
+      var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+      (function(){
+      var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+      s1.async=true;
+      s1.src='https://embed.tawk.to/61d81a01f7cf527e84d0e84e/1foq2b5nc';
+      s1.charset='UTF-8';
+      s1.setAttribute('crossorigin','*');
+      s0.parentNode.insertBefore(s1,s0);
+      })();
+      </script>
+    <!--End of Tawk.to Script-->
 	</body>
 </html>
