--- a/src/app.html
+++ b/src/app.html
@@ -2,7 +2,14 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<meta name="description" content="Svelte demo app" />
+		<meta name="description" content="4.-5. červen 2022, 🇨🇿 Praha  - Otevřená komunitní kryptoměnová konference" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@utxoprague" />
+    <meta name="twitter:title" content="UTXO.22 | 4.-5. červen 2022, 🇨🇿 Praha" />
+    <meta name="twitter:description" content="Otevřená komunitní kryptoměnová konference" />
+    <meta name="twitter:image" content="https://utxo.cz/favicon.png" />
+    <meta name="theme-color" content="#393F67" />
+
 		<link rel="icon" href="%svelte.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
     <script src="https://kit.fontawesome.com/c1c6b3e09d.js" crossorigin="anonymous"></script>
