--- a/src/app.html
+++ b/src/app.html
@@ -7,7 +7,7 @@
     <meta name="twitter:site" content="@utxoprague" />
     <meta name="twitter:title" content="UTXO.22 | 4.-5. červen 2022, 🇨🇿 Praha" />
     <meta name="twitter:description" content="Otevřená komunitní kryptoměnová konference" />
-    <meta name="twitter:image" content="https://utxo.cz/img/banner.jpg" />
+    <meta name="twitter:image" content="https://utxo.cz/img/banner2.jpg" />
     <meta name="theme-color" content="#393F67" />
 
 		<link rel="icon" href="%svelte.assets%/favicon.png" />
