--- a/src/app.html
+++ b/src/app.html
@@ -6,7 +6,7 @@
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@utxoprague" />
     <meta name="twitter:title" content="UTXO.22 | 4.-5. červen 2022, 🇨🇿 Praha" />
-    <meta name="twitter:description" content="Otevřená komunitní kryptoměnová konference" />
+    <meta name="twitter:description" content="Otevřená komunitní kryptoměnová konference. 2 dny, 50+ přednášejích, 100h+ obsahu, 1000+ návštěvníků" />
     <meta name="twitter:image" content="https://utxo.cz/img/banner2.jpg" />
     <meta name="theme-color" content="#393F67" />
 
