Update twitter desc

--- a/src/app.html
+++ b/src/app.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<meta name="description" content="4.-5. červen 2022, 🇨🇿 Praha  - Otevřená komunitní kryptoměnová konference" />
+		<meta name="description" content="4.-5. červen 2022 - Gabriel Loci, Praha - První ročník komunitní konference o blockchainu a kryptoměnách." />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@utxoprague" />
     <meta name="twitter:title" content="UTXO.22 | 4.-5. červen 2022, 🇨🇿 Praha" />
