--- a/src/app.html
+++ b/src/app.html
@@ -53,7 +53,7 @@
 	<body>
 		<div class="h-full w-full">%svelte.body%</div>
     <!--Start of Tawk.to Script-->
-      <script type="text/javascript">
+      <!--script type="text/javascript">
       var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
       (function(){
       var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
@@ -63,7 +63,7 @@
       s1.setAttribute('crossorigin','*');
       s0.parentNode.insertBefore(s1,s0);
       })();
-      </script>
+      </script--!>
     <!--End of Tawk.to Script-->
 
 	</body>
