--- a/src/app.html
+++ b/src/app.html
@@ -17,6 +17,8 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
+    <!-- Plausible -->
+		<script defer data-domain="utxo.cz" src="https://x.gwei.cz/js/script.js"></script>
 		%svelte.head%
     <script type="application/ld+json">
     {
