--- a/prakticke.html
+++ b/prakticke.html
@@ -17,9 +17,11 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
+    <!-- Plausible -->
+		<script defer data-domain="utxo.cz" src="https://x.gwei.cz/js/script.js"></script>
 		<meta http-equiv="content-security-policy" content="">
 	<link rel="stylesheet" href="/_app/assets/pages/__layout.svelte-4db814e2.css">
-	<link rel="modulepreload" href="/_app/start-df9b0c2f.js">
+	<link rel="modulepreload" href="/_app/start-c8eab8da.js">
 	<link rel="modulepreload" href="/_app/chunks/index-695b5929.js">
 	<link rel="modulepreload" href="/_app/chunks/index-57c7a2a5.js">
 	<link rel="modulepreload" href="/_app/chunks/singletons-d1fb5791.js">
@@ -70,7 +72,7 @@
 
 
 		<script type="module" data-hydrate="2eq20f">
-		import { start } from "/_app/start-df9b0c2f.js";
+		import { start } from "/_app/start-c8eab8da.js";
 		start({
 			target: document.querySelector('[data-hydrate="2eq20f"]').parentNode,
 			paths: {"base":"","assets":""},
