update images and dates

--- a/src/app.html
+++ b/src/app.html
@@ -2,12 +2,12 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<meta name="description" content="2.-4. červen 2023 - TBD, Praha - První ročník komunitní konference o blockchainu a kryptoměnách." />
+		<meta name="description" content="3.-4. červen 2023 - TBD, Praha - První ročník komunitní konference o blockchainu a kryptoměnách." />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@utxoprague" />
-    <meta name="twitter:title" content="UTXO.23 | 2.-4. červen 2023, 🇨🇿 Praha" />
+    <meta name="twitter:title" content="UTXO.23 | 3.-4. červen 2023, 🇨🇿 Praha" />
     <meta name="twitter:description" content="Otevřená komunitní kryptoměnová konference. 2 dny, 50+ přednášejích, 100h+ obsahu, 1000+ návštěvníků" />
-    <meta name="twitter:image" content="https://utxo.cz/img/banner2.jpg" />
+    <meta name="twitter:image" content="https://utxo.cz/img/banner.jpg" />
     <meta name="theme-color" content="#393F67" />
 
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
