--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<meta name="description" content="2.-4. červen 2023 - TBD, Praha - První ročník komunitní konference o blockchainu a kryptoměnách." />
+		<meta name="description" content="3.-4. červen 2023 - TBD, Praha - První ročník komunitní konference o blockchainu a kryptoměnách." />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@utxoprague" />
-    <meta name="twitter:title" content="UTXO.23 | 2.-4. červen 2023, 🇨🇿 Praha" />
+    <meta name="twitter:title" content="UTXO.23 | 3.-4. červen 2023, 🇨🇿 Praha" />
     <meta name="twitter:description" content="Otevřená komunitní kryptoměnová konference. 2 dny, 50+ přednášejích, 100h+ obsahu, 1000+ návštěvníků" />
-    <meta name="twitter:image" content="https://utxo.cz/img/banner2.jpg" />
+    <meta name="twitter:image" content="https://utxo.cz/img/banner.jpg" />
     <meta name="theme-color" content="#393F67" />
 
 		<link rel="icon" href="./favicon.png" />
@@ -51,13 +51,13 @@
     }
     </script>
     <meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/_layout-ea25cf00.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/_layout-a2e361c3.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/_page-456285a5.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-a98b0843.js">
+		<link rel="modulepreload" href="./_app/immutable/start-df03d944.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-80404206.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-6166ce0b.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-5ed3ec6f.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-1633f72a.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-8cf29399.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/stores-64e8bb94.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/stores-fe543342.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/config-455f5b6c.js">
@@ -94,7 +94,7 @@
         </div>
         <div class="my-8"><a href="/"><svg class="w-3/4 md:w-1/2 m-auto" height="100%" viewBox="0 0 405 70" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;"><g id="g10"><g><g id="g14"><path id="path16" d="M119.041,0.333L119.372,69.571L102.368,69.667L102.039,0.429L119.041,0.333Z" style="fill:white;fill-rule:nonzero;"></path></g><g id="g18"><path id="path20" d="M144.606,27L144.705,43.997L76.805,44.333L76.705,27.336L144.606,27Z" style="fill:white;fill-rule:nonzero;"></path></g></g><g><g id="g22"><path id="path24" d="M211.944,13.004L155.7,69.753L143.624,57.821L199.868,1.072L211.944,13.004Z" style="fill:white;fill-rule:nonzero;"></path></g><g id="g26"><path id="path28" d="M212.787,56.826L200.863,68.902L144.115,12.666L156.038,0.59L212.787,56.826Z" style="fill:white;fill-rule:nonzero;"></path></g></g><g id="g30"><g id="g32"><g id="g38"><path id="path40" d="M248.274,17.181C257.843,17.181 265.662,25.136 265.662,35.021C265.662,44.905 257.843,52.86 248.274,52.86C238.704,52.86 230.886,44.905 230.886,35.021C230.886,25.136 238.704,17.181 248.274,17.181M248.274,0.333C229.332,0.333 214.038,15.896 214.038,35.021C214.038,54.145 229.332,69.708 248.274,69.708C267.215,69.708 282.51,54.145 282.51,35.021C282.51,15.896 267.215,0.333 248.274,0.333" style="fill:white;fill-rule:nonzero;"></path></g></g></g><g><g id="g42"><g id="g44"><g id="g50"><g id="g52"><path id="path60" d="M44.877,19.683C49.465,22.955 52.328,28.351 52.328,34.288C52.328,44.137 44.521,52.081 34.941,52.081C25.361,52.081 17.555,44.137 17.555,34.288C17.555,28.399 20.372,23.043 24.893,19.764L13.645,7.085C5.619,13.555 0.705,23.48 0.705,34.288C0.705,53.451 16.011,69.024 34.941,69.024C53.871,69.024 69.177,53.451 69.177,34.288C69.177,23.433 64.22,13.468 56.129,7L44.877,19.683Z" style="fill:url(#_Linear1);fill-rule:nonzero;"></path></g></g></g></g></g><g><g id="g62"><g id="g64"><rect id="path70" x="282.752" y="59.747" width="8.877" height="8.877" style="fill:white;fill-rule:nonzero;"></rect></g></g><g transform="matrix(8.383,0,0,8.383,-2415.97,-295.918)"><g transform="matrix(11.3461,0,0,11.3461,323.671,43.5138)"><path d="M0.059,-0.127L0.334,-0.393C0.342,-0.401 0.35,-0.409 0.359,-0.419C0.368,-0.428 0.376,-0.437 0.383,-0.447C0.39,-0.457 0.395,-0.468 0.4,-0.479C0.405,-0.49 0.407,-0.501 0.407,-0.513C0.407,-0.528 0.404,-0.541 0.399,-0.552C0.393,-0.563 0.385,-0.573 0.376,-0.581C0.367,-0.589 0.356,-0.595 0.344,-0.6C0.331,-0.604 0.318,-0.606 0.304,-0.606C0.274,-0.606 0.249,-0.597 0.23,-0.58C0.211,-0.563 0.199,-0.539 0.195,-0.51L0.069,-0.52C0.072,-0.553 0.08,-0.582 0.093,-0.607C0.106,-0.632 0.122,-0.652 0.143,-0.669C0.164,-0.686 0.188,-0.698 0.215,-0.707C0.242,-0.716 0.272,-0.72 0.304,-0.72C0.336,-0.72 0.366,-0.716 0.394,-0.708C0.421,-0.699 0.445,-0.687 0.466,-0.671C0.487,-0.654 0.503,-0.633 0.515,-0.608C0.527,-0.583 0.533,-0.553 0.533,-0.519C0.533,-0.474 0.523,-0.436 0.503,-0.404C0.482,-0.371 0.456,-0.34 0.424,-0.311L0.205,-0.108L0.533,-0.108L0.533,-0L0.059,-0L0.059,-0.127Z" style="fill:white;fill-rule:nonzero;"></path></g><g transform="matrix(11.3461,0,0,11.3461,330.388,43.5138)"><path d="M0.222,-0.423L0.253,-0.423C0.27,-0.423 0.287,-0.424 0.304,-0.426C0.32,-0.428 0.335,-0.432 0.348,-0.439C0.361,-0.446 0.371,-0.455 0.379,-0.468C0.387,-0.481 0.391,-0.498 0.391,-0.519C0.391,-0.546 0.382,-0.569 0.363,-0.586C0.344,-0.603 0.32,-0.612 0.29,-0.612C0.266,-0.612 0.245,-0.605 0.226,-0.592C0.207,-0.578 0.193,-0.559 0.184,-0.534L0.057,-0.568C0.065,-0.594 0.076,-0.617 0.091,-0.636C0.106,-0.655 0.123,-0.671 0.143,-0.684C0.163,-0.696 0.185,-0.705 0.209,-0.711C0.233,-0.717 0.258,-0.72 0.284,-0.72C0.315,-0.72 0.344,-0.716 0.371,-0.708C0.398,-0.7 0.422,-0.688 0.443,-0.673C0.464,-0.657 0.48,-0.637 0.493,-0.614C0.505,-0.59 0.511,-0.562 0.511,-0.531C0.511,-0.493 0.5,-0.459 0.479,-0.43C0.458,-0.4 0.428,-0.38 0.39,-0.371L0.39,-0.369C0.435,-0.362 0.47,-0.343 0.493,-0.311C0.516,-0.279 0.528,-0.241 0.528,-0.197C0.528,-0.163 0.522,-0.133 0.509,-0.107C0.496,-0.081 0.478,-0.059 0.456,-0.042C0.434,-0.024 0.409,-0.011 0.38,-0.002C0.351,0.008 0.32,0.012 0.289,0.012C0.26,0.012 0.232,0.009 0.206,0.003C0.18,-0.004 0.157,-0.014 0.136,-0.027C0.115,-0.04 0.096,-0.057 0.081,-0.079C0.066,-0.099 0.054,-0.125 0.046,-0.154L0.174,-0.188C0.181,-0.159 0.194,-0.136 0.213,-0.12C0.232,-0.104 0.257,-0.096 0.289,-0.096C0.305,-0.096 0.32,-0.099 0.335,-0.104C0.349,-0.109 0.362,-0.117 0.373,-0.127C0.384,-0.136 0.392,-0.148 0.399,-0.162C0.405,-0.175 0.408,-0.19 0.408,-0.207C0.408,-0.23 0.403,-0.248 0.394,-0.263C0.384,-0.277 0.372,-0.288 0.357,-0.296C0.341,-0.303 0.325,-0.308 0.306,-0.311C0.287,-0.314 0.269,-0.315 0.251,-0.315L0.222,-0.315L0.222,-0.423Z" style="fill:white;fill-rule:nonzero;"></path></g></g></g></g><defs><linearGradient id="_Linear1" x1="0" y1="0" x2="1" y2="0" gradientUnits="userSpaceOnUse" gradientTransform="matrix(58.1935,-21.0445,21.0445,58.1935,7.78231,45.1011)"><stop offset="0" style="stop-color:rgb(0,216,130);stop-opacity:1"></stop><stop offset="0" style="stop-color:rgb(5,187,188);stop-opacity:1"></stop><stop offset="0.01" style="stop-color:rgb(0,216,130);stop-opacity:1"></stop><stop offset="1" style="stop-color:rgb(193,105,219);stop-opacity:1"></stop></linearGradient></defs></svg></a></div>
         <div class="my-8 flex flex-wrap gap-3 lg:gap-10 text-lg lg:text-xl font-semibold justify-center"><div class="flex items-center gap-3"><div class="w-8 h-8 sm:w-12 sm:h-12 text-base sm:text-2xl border-2 text-center rounded-2xl flex items-center justify-center"><i class="fa-regular fa-calendar-days text-custom-white"></i></div>
-            <div class="text-white">2.-4. červen 2023</div></div>
+            <div class="text-white">3.-4. červen 2023</div></div>
           <div class="flex items-center gap-3"><div class="w-8 h-8 sm:w-12 sm:h-12 text-base sm:text-2xl border-2 text-center rounded-2xl flex items-center justify-center"><i class="fa-solid fa-location-dot text-white"></i></div>
             <div class="text-white">Gabriel Loci, Praha</div></div></div>
         <div class="flex my-16 gap-4 flex-wrap">
@@ -386,59 +386,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/petr-sanetrnik-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Petr Sanetrník"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/josef-gattermayer-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Josef Gattermayer"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/adam-sobotka-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Adam Sobotka"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/petr-mensik-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Petr Menšík"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jiri-cepelka-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jiří Čepelka"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jiri-skrivan-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jiří Skřivan"></div>
 
 
 
@@ -464,46 +412,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jan-zibner-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jan Zibner"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/ondrej-rehacek-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Ondřej Řeháček"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/fetyas-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Tomáš Kalabis"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jan-cerny-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jan Černý"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/josef-gattermayer-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Josef Gattermayer"></div>
 
 
 
@@ -529,7 +438,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/tereza-starostova-twitter.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Tereza Starostová"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/fetyas-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Tomáš Kalabis"></div>
 
 
 
@@ -542,7 +451,72 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/radek-svarz-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Radek Švarz"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/petr-mensik-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Petr Menšík"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/petr-lukac-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Petr Lukáč"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/petr-sanetrnik-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Petr Sanetrník"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/adam-sobotka-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Adam Sobotka"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jan-cerny-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jan Černý"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/ondrej-rehacek-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Ondřej Řeháček"></div>
 
 
 
@@ -568,20 +542,46 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jiri-skrivan-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jiří Skřivan"></div>
-
-
-
-
-
-
-
-
-
-
-
-
 <div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/petr-hotovec-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Petr Hotovec"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jiri-cepelka-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jiří Čepelka"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jan-zibner-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jan Zibner"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/tereza-starostova-twitter.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Tereza Starostová"></div>
 
 
 
@@ -607,19 +607,6 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/stanislav-simek-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Stanislav Šimek"></div>
-
-
-
-
-
-
-
-
-
-
-
-
 <div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/hynek-jina-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Hynek Jína"></div>
 
 
@@ -633,7 +620,20 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/petr-lukac-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Petr Lukáč"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/radek-svarz-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Radek Švarz"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/stanislav-simek-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Stanislav Šimek"></div>
 
 
 
@@ -728,7 +728,7 @@
             <p>Ano, plánujeme bohatý program i pro návštěvníky online - živé přenosy ze všech přednáškových sálů, rozhovory s návštěvníky a další obsah. Vše bude zdarma dostupné na doméně UTXO.TV (a <a href="https://www.youtube.com/channel/UCXLBCW1pstQPQf-4zRESepA" class="underline hover:no-underline" target="_blank">YouTube</a>).</p>
           </div></div></div></section></div></main></div>
     <div class="bg-gradient-to-b from-custom-darkpurple to-custom-darkestpurple text-white print:hidden"><div class="relative mx-auto px-6 pt-10 pb-2 sm:pb-6 max-w-7xl sm:flex pr-4"><div class="flex-1"><div><a href="/"><img src="/img/logo.svg" alt="UTXO.23" class="w-32"></a></div>
-        <div class="mt-4 font-semibold">2.-4. červen 2023 @ Gabriel Loci, Praha
+        <div class="mt-4 font-semibold">3.-4. červen 2023 @ Gabriel Loci, Praha
         </div>
         <div class="mt-2 font-thin">Otevřená komunitní kryptoměnová konference
         </div>
@@ -743,14 +743,14 @@
         <a href="https://www.ppmedia.cz/" target="_blank"><img src="/img/pen-production-logo.svg" class="w-28 inline-block pb-2 ml-1" alt="Pen&Production"></a></div></div></div></div>
 
 
-		<script type="module" data-sveltekit-hydrate="13zgkr6">
-			import { start } from "./_app/immutable/start-a98b0843.js";
+		<script type="module" data-sveltekit-hydrate="1uipw2a">
+			import { start } from "./_app/immutable/start-df03d944.js";
 
 			start({
 				env: {},
 				paths: {"assets":"","base":""},
-				target: document.querySelector('[data-sveltekit-hydrate="13zgkr6"]').parentNode,
-				version: "1676918762569",
+				target: document.querySelector('[data-sveltekit-hydrate="1uipw2a"]').parentNode,
+				version: "1677158835265",
 				hydrate: {
 					node_ids: [0, 2],
 					data: [null,null],
