--- a/navstevnici.html
+++ b/navstevnici.html
@@ -2,12 +2,12 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<meta name="description" content="2.-4. červen 2023 - TBD, Praha - První ročník komunitní konference o blockchainu a kryptoměnách." />
+		<meta name="description" content="3.-4. červen 2023 - TBD, Praha - První ročník komunitní konference o blockchainu a kryptoměnách." />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@utxoprague" />
-    <meta name="twitter:title" content="UTXO.23 | 2.-4. červen 2023, 🇨🇿 Praha" />
+    <meta name="twitter:title" content="UTXO.23 | 3.-4. červen 2023, 🇨🇿 Praha" />
     <meta name="twitter:description" content="Otevřená komunitní kryptoměnová konference. 2 dny, 50+ přednášejích, 100h+ obsahu, 1000+ návštěvníků" />
-    <meta name="twitter:image" content="https://utxo.cz/img/banner2.jpg" />
+    <meta name="twitter:image" content="https://utxo.cz/img/banner.jpg" />
     <meta name="theme-color" content="#393F67" />
 
 		<link rel="icon" href="./favicon.png" />
@@ -51,12 +51,12 @@
     }
     </script>
     <meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/_layout-ea25cf00.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-a98b0843.js">
+		<link href="./_app/immutable/assets/_layout-a2e361c3.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/start-df03d944.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-80404206.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-6166ce0b.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-5ed3ec6f.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-1633f72a.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-8cf29399.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/stores-64e8bb94.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/stores-fe543342.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/config-455f5b6c.js">
@@ -102,7 +102,7 @@
 
   </section></div></main></div>
     <div class="bg-gradient-to-b from-custom-darkpurple to-custom-darkestpurple text-white print:hidden"><div class="relative mx-auto px-6 pt-10 pb-2 sm:pb-6 max-w-7xl sm:flex pr-4"><div class="flex-1"><div><a href="/"><img src="/img/logo.svg" alt="UTXO.23" class="w-32"></a></div>
-        <div class="mt-4 font-semibold">2.-4. červen 2023 @ Gabriel Loci, Praha
+        <div class="mt-4 font-semibold">3.-4. červen 2023 @ Gabriel Loci, Praha
         </div>
         <div class="mt-2 font-thin">Otevřená komunitní kryptoměnová konference
         </div>
@@ -117,14 +117,14 @@
         <a href="https://www.ppmedia.cz/" target="_blank"><img src="/img/pen-production-logo.svg" class="w-28 inline-block pb-2 ml-1" alt="Pen&Production"></a></div></div></div></div>
 
 
-		<script type="module" data-sveltekit-hydrate="kojjcu">
-			import { start } from "./_app/immutable/start-a98b0843.js";
+		<script type="module" data-sveltekit-hydrate="zhy6wv">
+			import { start } from "./_app/immutable/start-df03d944.js";
 
 			start({
 				env: {},
 				paths: {"assets":"","base":""},
-				target: document.querySelector('[data-sveltekit-hydrate="kojjcu"]').parentNode,
-				version: "1676918762569",
+				target: document.querySelector('[data-sveltekit-hydrate="zhy6wv"]').parentNode,
+				version: "1677158835265",
 				hydrate: {
 					node_ids: [0, 10],
 					data: [null,null],
