deploy: d728152c411e6f007da02c28ee93fac4bb55f7e4

--- a/lide/huge.html
+++ b/lide/huge.html
@@ -53,12 +53,12 @@
     <meta http-equiv="content-security-policy" content="">
 		<link href="../_app/immutable/assets/_layout-63d87ff5.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/_page-a3426dfb.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/start-2cc6908a.js">
+		<link rel="modulepreload" href="../_app/immutable/start-bc369243.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index-f71fcd82.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/singletons-b6e546a3.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index-4bfa7427.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/control-e7f5239e.js">
-		<link rel="modulepreload" href="../_app/immutable/components/pages/_layout.svelte-b2cd3031.js">
+		<link rel="modulepreload" href="../_app/immutable/components/pages/_layout.svelte-30edec58.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/stores-d4fc842c.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/stores-c713c1dd.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Transition-adb530ea.js">
@@ -86,6 +86,9 @@
         <i class="fa-solid fa-xmark fa-2x"></i></button>
       <div class="flex flex-col md:flex-row my-auto w-full"><a href="/" class="flex md:hidden"><img src="/img/logo.svg" class="h-10 m-auto" alt="UTXO 23 Logo"></a>
         <ul class="flex shrink-0 flex-col p-4 mt-4 text-center text-lg md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium md:border-0"><li class="relative"><a sveltekit:prefetch href="/" target="_self" class="block py-4 pl-3 pr-4 text-white rounded hover:bg-white/20 md:hover:bg-transparent md:border-0 md:hover:underline md:hover:decoration-custom-green md:hover:decoration-2 md:hover:underline-offset-4 md:p-0 false">Domů<!-- HTML_TAG_START --><!-- HTML_TAG_END --></a>
+                    <div class="md:hidden border-b absolute bottom-0 left-1/4 border-custom-green/50 w-1/2"></div>
+                    
+                </li><li class="relative"><a sveltekit:prefetch href="https://vstupenky.utxo.cz/23/" target="_blank" class="block py-4 pl-3 pr-4 text-white rounded hover:bg-white/20 md:hover:bg-transparent md:border-0 md:hover:underline md:hover:decoration-custom-green md:hover:decoration-2 md:hover:underline-offset-4 md:p-0 false">Vstupenky<!-- HTML_TAG_START -->&nbsp;<i class="fa-solid fa-up-right-from-square fa-sm opacity-70"></i><!-- HTML_TAG_END --></a>
                     <div class="md:hidden border-b absolute bottom-0 left-1/4 border-custom-green/50 w-1/2"></div>
                     
                 </li><li class="relative"><a sveltekit:prefetch href="https://utxo.tv/" target="_blank" class="block py-4 pl-3 pr-4 text-white rounded hover:bg-white/20 md:hover:bg-transparent md:border-0 md:hover:underline md:hover:decoration-custom-green md:hover:decoration-2 md:hover:underline-offset-4 md:p-0 false">Záznamy<!-- HTML_TAG_START -->&nbsp;<i class="fa-solid fa-up-right-from-square fa-sm opacity-70"></i><!-- HTML_TAG_END --></a>
@@ -144,14 +147,14 @@
         <a href="https://www.ppmedia.cz/" target="_blank" rel="noreferrer"><img src="/img/pen-production-logo.svg" class="w-28 inline-block pb-2 ml-1" alt="Pen&Production"></a></div></div></div></div>
 
 
-		<script type="module" data-sveltekit-hydrate="w8e16s">
-			import { start } from "../_app/immutable/start-2cc6908a.js";
+		<script type="module" data-sveltekit-hydrate="cq4ynp">
+			import { start } from "../_app/immutable/start-bc369243.js";
 
 			start({
 				env: {},
 				paths: {"assets":"","base":""},
-				target: document.querySelector('[data-sveltekit-hydrate="w8e16s"]').parentNode,
-				version: "1677269606484",
+				target: document.querySelector('[data-sveltekit-hydrate="cq4ynp"]').parentNode,
+				version: "1677485186841",
 				hydrate: {
 					node_ids: [0, 7],
 					data: [null,null],
