deploy: 80e340863ff0ee457bcb8b18a0d6281f1c7d4845

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<meta name="description" content="3.-4. červen 2023 - TBD, Praha - První ročník komunitní konference o blockchainu a kryptoměnách." />
+		<meta name="description" content="3.-4. červen 2023 - Gabriel Loci, Praha - První ročník komunitní konference o blockchainu a kryptoměnách." />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@utxoprague" />
     <meta name="twitter:title" content="UTXO.23 | 3.-4. červen 2023, 🇨🇿 Praha" />
@@ -408,98 +408,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jan-cerny-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jan Černý"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/huge-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Huge"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/petr-hotovec-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Petr Hotovec"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/petr-mensik-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Petr Menšík"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/tree-twitter.jpg" class="w-16 h-16 rounded-lg m-auto" alt="tree"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jacob-jelen-twitter.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jacob Jelen"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jiri-cepelka-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jiří Čepelka"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jiri-skrivan-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jiří Skřivan"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/hynek-jina-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Hynek Jína"></div>
 
 
 
@@ -538,7 +447,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/adam-hrazdira-web.png" class="w-16 h-16 rounded-lg m-auto" alt="Adam Hrazdira"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jiri-skrivan-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jiří Skřivan"></div>
 
 
 
@@ -551,7 +460,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/adam-sobotka-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Adam Sobotka"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/tree-twitter.jpg" class="w-16 h-16 rounded-lg m-auto" alt="tree"></div>
 
 
 
@@ -564,7 +473,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/hynek-jina-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Hynek Jína"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jacob-jelen-twitter.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jacob Jelen"></div>
 
 
 
@@ -577,46 +486,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/tereza-starostova-twitter.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Tereza Starostová"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/ondrej-rehacek-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Ondřej Řeháček"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/josef-gattermayer-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Josef Gattermayer"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/petr-sanetrnik-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Petr Sanetrník"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/huge-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Huge"></div>
 
 
 
@@ -642,6 +512,45 @@
 
 
 
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/petr-hotovec-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Petr Hotovec"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/adam-sobotka-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Adam Sobotka"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/radek-svarz-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Radek Švarz"></div>
+
+
+
+
+
+
+
+
+
+
+
+
 <div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/martin-janik-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Martin Janík"></div>
 
 
@@ -655,7 +564,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jakub-jedlinsky-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jakub Jedlinský"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jiri-cepelka-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jiří Čepelka"></div>
 
 
 
@@ -681,7 +590,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/stanislav-simek-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Stanislav Šimek"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jan-cerny-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jan Černý"></div>
 
 
 
@@ -694,7 +603,33 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jan-zibner-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jan Zibner"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/josef-gattermayer-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Josef Gattermayer"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/ondrej-rehacek-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Ondřej Řeháček"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/adam-hrazdira-web.png" class="w-16 h-16 rounded-lg m-auto" alt="Adam Hrazdira"></div>
 
 
 
@@ -720,7 +655,72 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/radek-svarz-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Radek Švarz"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jan-zibner-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jan Zibner"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/petr-mensik-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Petr Menšík"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/stanislav-simek-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Stanislav Šimek"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/tereza-starostova-twitter.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Tereza Starostová"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/petr-sanetrnik-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Petr Sanetrník"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jakub-jedlinsky-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jakub Jedlinský"></div>
 
 
 
@@ -821,14 +821,14 @@
         <a href="https://www.ppmedia.cz/" target="_blank" rel="noreferrer"><img src="/img/pen-production-logo.svg" class="w-28 inline-block pb-2 ml-1" alt="Pen&Production"></a></div></div></div></div>
 
 
-		<script type="module" data-sveltekit-hydrate="bklmfo">
+		<script type="module" data-sveltekit-hydrate="12g73pw">
 			import { start } from "./_app/immutable/start-31ebb8c6.js";
 
 			start({
 				env: {},
 				paths: {"assets":"","base":""},
-				target: document.querySelector('[data-sveltekit-hydrate="bklmfo"]').parentNode,
-				version: "1677488914716",
+				target: document.querySelector('[data-sveltekit-hydrate="12g73pw"]').parentNode,
+				version: "1677489507314",
 				hydrate: {
 					node_ids: [0, 2],
 					data: [null,null],
