--- a/gratulujeme.html
+++ b/gratulujeme.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<meta name="description" content="3.-4. červen 2023 - TBD, Praha - První ročník komunitní konference o blockchainu a kryptoměnách." />
+		<meta name="description" content="3.-4. červen 2023 - Gabriel Loci, Praha - První ročník komunitní konference o blockchainu a kryptoměnách." />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@utxoprague" />
     <meta name="twitter:title" content="UTXO.23 | 3.-4. červen 2023, 🇨🇿 Praha" />
@@ -96,7 +96,7 @@
       <main><div><section class="relative mx-auto py-6 sm:py-10 px-6 max-w-6xl text-blue-web"><div class=""><div class="text-3xl lg:text-4xl text-center">🎉 Gratulujeme k nákupu vstupenek!
     </div>
     <div class="mt-4 text-lg text-center">Najdeš je v mailu nebo na stránce <a href="/vstupenky" class="underline hover:no-underline">vstupenky</a></div>
-    <div class="flex mt-6"><img class="m-auto w-auto lg:max-w-3xl" src="/gifs/funny-celebrate-8.gif"></div>
+    <div class="flex mt-6"><img class="m-auto w-auto lg:max-w-3xl" src="/gifs/funny-celebrate-5.gif"></div>
     <div class="mt-10 text-xl text-center mt-6">Co teď? Poděl se o tu radost s ostatními <a href="https://twitter.com/intent/tweet?text=M%C3%A1m%20l%C3%ADstek%20na%20%40utxoprague%20%F0%9F%8E%89%20Poj%C4%8F%20taky%21%0A%20%23utxo22" class="underline hover:no-underline" target="_blank">tweetem</a></div>
     <div class="text-xl text-center mt-6">Prohlédni si <a href="/program" class="underline hover:no-underline">aktuální program</a></div>
     <div class="text-xl text-center mt-6">Sleduj novinky na <a href="https://twitter.com/utxoprague" class="underline hover:no-underline" target="_blank">Twitteru</a> <i class="fa-brands fa-twitter"></i></div></div></section></div></main></div>
@@ -116,14 +116,14 @@
         <a href="https://www.ppmedia.cz/" target="_blank" rel="noreferrer"><img src="/img/pen-production-logo.svg" class="w-28 inline-block pb-2 ml-1" alt="Pen&Production"></a></div></div></div></div>
 
 
-		<script type="module" data-sveltekit-hydrate="14hsawj">
+		<script type="module" data-sveltekit-hydrate="jfpkla">
 			import { start } from "./_app/immutable/start-31ebb8c6.js";
 
 			start({
 				env: {},
 				paths: {"assets":"","base":""},
-				target: document.querySelector('[data-sveltekit-hydrate="14hsawj"]').parentNode,
-				version: "1677488914716",
+				target: document.querySelector('[data-sveltekit-hydrate="jfpkla"]').parentNode,
+				version: "1677489507314",
 				hydrate: {
 					node_ids: [0, 5],
 					data: [null,null],
