--- a/lide/jiri-cepelka.html
+++ b/lide/jiri-cepelka.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<meta name="description" content="3.-4. červen 2023 - TBD, Praha - První ročník komunitní konference o blockchainu a kryptoměnách." />
+		<meta name="description" content="3.-4. červen 2023 - Gabriel Loci, Praha - První ročník komunitní konference o blockchainu a kryptoměnách." />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@utxoprague" />
     <meta name="twitter:title" content="UTXO.23 | 3.-4. červen 2023, 🇨🇿 Praha" />
@@ -155,7 +155,7 @@ Aktivně se podílím na budování soukromí ve Web3 a na adopci Secret Network
 				env: {},
 				paths: {"assets":"","base":""},
 				target: document.querySelector('[data-sveltekit-hydrate="lhe7zi"]').parentNode,
-				version: "1677488914716",
+				version: "1677489507314",
 				hydrate: {
 					node_ids: [0, 7],
 					data: [null,null],
