--- a/lide/karel-fillner.html
+++ b/lide/karel-fillner.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<meta name="description" content="3.-4. červen 2023 - TBD, Praha - První ročník komunitní konference o blockchainu a kryptoměnách." />
+		<meta name="description" content="3.-4. červen 2023 - Gabriel Loci, Praha - První ročník komunitní konference o blockchainu a kryptoměnách." />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@utxoprague" />
     <meta name="twitter:title" content="UTXO.23 | 3.-4. červen 2023, 🇨🇿 Praha" />
@@ -154,7 +154,7 @@
 				env: {},
 				paths: {"assets":"","base":""},
 				target: document.querySelector('[data-sveltekit-hydrate="eo1i07"]').parentNode,
-				version: "1677488914716",
+				version: "1677489507314",
 				hydrate: {
 					node_ids: [0, 7],
 					data: [null,null],
