--- a/fotky.html
+++ b/fotky.html
@@ -52,16 +52,16 @@
     </script>
     <meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout-91c570b8.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-e9f9c9ed.js">
+		<link rel="modulepreload" href="./_app/immutable/start-adb99c8b.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-df980920.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-e3f9a09f.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-f3e57eca.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/control-e7f5239e.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-b8494c98.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-cb9c55bd.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/stores-cf1ad688.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/stores-8f576444.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/bundle-0bfcc7ba.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Transition-b75aafd1.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Transition-29dc2956.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/_layout.js-39e7015f.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_layout-a2f78447.js">
 		<link rel="modulepreload" href="./_app/immutable/components/pages/fotky/_page.svelte-ed76487b.js"><title>Fotky | UTXO.22</title><!-- HEAD_svelte-1gcr9uq_START --><!-- HEAD_svelte-1gcr9uq_END -->
@@ -98,7 +98,6 @@
   </div></header>
 
       <main><div>
-
 
 
 <section class="relative mx-auto py-6 sm:py-10 px-6 max-w-6xl text-custom-darkpurple"><h1 class="uppercase text-2xl font-bold mb-4"><a href="https://photos.app.goo.gl/8ogj2Y3cdUGwMAc4A">Fotky</a></h1>
@@ -440,14 +439,14 @@
         <a href="https://www.ppmedia.cz/" target="_blank" rel="noreferrer"><img src="/img/pen-production-logo.svg" class="w-28 inline-block pb-2 ml-1" alt="Pen&Production"></a></div></div></div></div>
 
 
-		<script type="module" data-sveltekit-hydrate="vju88n">
-			import { start } from "./_app/immutable/start-e9f9c9ed.js";
+		<script type="module" data-sveltekit-hydrate="1r9r2m5">
+			import { start } from "./_app/immutable/start-adb99c8b.js";
 
 			start({
 				env: {},
 				paths: {"assets":"","base":""},
-				target: document.querySelector('[data-sveltekit-hydrate="vju88n"]').parentNode,
-				version: "1677572765624",
+				target: document.querySelector('[data-sveltekit-hydrate="1r9r2m5"]').parentNode,
+				version: "1677769883114",
 				hydrate: {
 					node_ids: [0, 4],
 					data: [null,null],
