--- a/gratulujeme.html
+++ b/gratulujeme.html
@@ -52,16 +52,16 @@
     </script>
     <meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout-91c570b8.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-e9f9c9ed.js">
+		<link rel="modulepreload" href="./_app/immutable/start-adb99c8b.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-df980920.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-e3f9a09f.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-f3e57eca.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/control-e7f5239e.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-b8494c98.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-cb9c55bd.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/stores-cf1ad688.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/stores-8f576444.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/bundle-0bfcc7ba.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Transition-b75aafd1.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Transition-29dc2956.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/_layout.js-39e7015f.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_layout-a2f78447.js">
 		<link rel="modulepreload" href="./_app/immutable/components/pages/gratulujeme/_page.svelte-5855e069.js">
@@ -100,7 +100,7 @@
       <main><div><section class="relative mx-auto py-6 sm:py-10 px-6 max-w-6xl text-blue-web"><div class=""><div class="text-3xl lg:text-4xl text-center">🎉 Gratulujeme k nákupu vstupenek!
     </div>
     
-    <div class="flex mt-6"><img class="m-auto w-auto lg:max-w-3xl" src="/gifs/funny-celebrate-7.gif"></div>
+    <div class="flex mt-6"><img class="m-auto w-auto lg:max-w-3xl" src="/gifs/funny-celebrate-2.gif"></div>
     <div class="mt-10 text-xl text-center mt-6">Co teď? Poděl se o tu radost s ostatními <a href="https://twitter.com/intent/tweet?text=M%C3%A1m%20l%C3%ADstek%20na%20%40utxoprague%20%F0%9F%8E%89%20Poj%C4%8F%20taky%21%20utxo.cz%20%23utxo23%20" class="underline hover:no-underline" target="_blank">tweetem</a></div>
     
     <div class="text-xl text-center mt-6">Sleduj novinky na <a href="https://twitter.com/utxoprague" class="underline hover:no-underline" target="_blank">Twitteru</a> <i class="fa-brands fa-twitter"></i></div></div></section></div></main></div>
@@ -124,14 +124,14 @@
         <a href="https://www.ppmedia.cz/" target="_blank" rel="noreferrer"><img src="/img/pen-production-logo.svg" class="w-28 inline-block pb-2 ml-1" alt="Pen&Production"></a></div></div></div></div>
 
 
-		<script type="module" data-sveltekit-hydrate="nslod6">
-			import { start } from "./_app/immutable/start-e9f9c9ed.js";
+		<script type="module" data-sveltekit-hydrate="1cw2fi7">
+			import { start } from "./_app/immutable/start-adb99c8b.js";
 
 			start({
 				env: {},
 				paths: {"assets":"","base":""},
-				target: document.querySelector('[data-sveltekit-hydrate="nslod6"]').parentNode,
-				version: "1677572765624",
+				target: document.querySelector('[data-sveltekit-hydrate="1cw2fi7"]').parentNode,
+				version: "1677769883114",
 				hydrate: {
 					node_ids: [0, 5],
 					data: [null,null],
